--- a/StudioViews/StudioViews/StudioViews.csproj
+++ b/StudioViews/StudioViews/StudioViews.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
@@ -184,7 +186,9 @@
     <Compile Include="Services\WordCountProvider.cs" />
     <Compile Include="TellMe\CommunityAppStoreForumAction.cs" />
     <Compile Include="TellMe\DocumentationAction.cs" />
+    <Compile Include="TellMe\ImportAction.cs" />
     <Compile Include="TellMe\SourceCodeAction.cs" />
+    <Compile Include="TellMe\SplitAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
     <Compile Include="Themes\Generic\CustomProgressRing.cs" />
     <Compile Include="ViewModel\BaseModel.cs" />
