--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -3,7 +3,7 @@
 
 	<PropertyGroup>
 		<UseWPF>true</UseWPF>
-		<LangVersion>preview</LangVersion>
+		<LangVersion>latest</LangVersion>
 		<TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
 
@@ -17,6 +17,14 @@
 	<PropertyGroup>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
 		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;CS8509</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;CS8509</NoWarn>
 	</PropertyGroup>
 	
 	<ItemGroup>
