Fix an error from drag and drop warning settings

--- a/SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
+++ b/SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
@@ -123,6 +123,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Settings.ico" />
     <None Include="Resources\TellmeDocumentation.ico" />
     <None Include="Resources\SourceCode.ico" />
     <EmbeddedResource Include="PluginResources.resx">
