--- a/LanguageMappingProvider/LanguageMappingProviderFacts.Tests/LanguageMappingProviderFacts.Tests.csproj
+++ b/LanguageMappingProvider/LanguageMappingProviderFacts.Tests/LanguageMappingProviderFacts.Tests.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <IsPackable>false</IsPackable>
+		<LangVersion>latest</LangVersion>
+    <IsTestProject>true</IsTestProject>
     <TargetFramework>net48</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-  </PropertyGroup>
+	</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
